src/navBar/navBar.css
/* UI Bar */
/* *{outline: 1px solid red;} */

/* Hiding the filter options ui from the actual page. */
#cardArea > .filterButtonWrapper, #bookmarkWrapper > .filterButtonWrapper{
    position: absolute;
    left: -99999999px;
}

.newUIBarWrapper{
    /* border: 1px solid red; */
    align-items: center;
    display: flex;
        flex-direction: row;
        /* align-items: flex-end; */
        justify-content: flex-end;
    height: inherit;
    /* margin-top: 30px; */
    /* margin-bottom: 30px; */
    width: inherit;
}
#theKnewsHeader{

}
.headerWrapper{
    background-color: black;
    height: inherit;
        min-height: 53px;
    display: flex;
        align-items: center;
    /* position: fixed; */
    outline: 2px solid black;
    width: 100%;
    z-index: 100;
}
    .headerText{
        background-color: black;
        display: flex;
            justify-content: center;
        color:white;
        
        width: 100%;
    }
        .headerText > a{
            color: white !important; 
            display: flex;
                align-items: center;
            height: 52px;}
        .headerText > a > div{
            display: flex;
                align-items: flex-end;
        }
        .headerText > a > div > * {
            margin:0;
            padding: 0;
            /* border: 1px solid red; */
        }
        .headerText > a > div > span{
            font-size: x-large;
        }
    .navWrapper{
        height: 100%;
        width: auto;

        /* navbar at bottom of screen test */
        /* position: fixed;
        bottom: 0;
        z-index: 20;
        background-color: white;
        width: 100%; */
    }
        #homeBtn > button{
            background-color: white !important;
            color: black !important;
        }
        #homeBtn > button > a { 
            /* background-color: red; */
        }
    .uiBarItem{
        align-items: center;
        background-color: white;
        outline: 2px solid black;
        box-sizing: content-box;
        /* cursor: pointer; */
        display: flex;
            flex: 1 40%;
            flex-wrap: wrap;
            justify-content: center;
        height: inherit;
            min-height: 53px;
        /* margin: 2px; */
        /* max-width: 160px; */
            /* width: 100%; */
        position: relative;
    }

        #bookmarkBtn:hover{color: #28a745; }
        #liteKnewsBtn:hover{color: orange; }
        #filterBtn:hover{color: aqua; }
        #changeCardBtn:hover{color: rgb(17, 0, 255); }
        #settingsBtn:hover{color: pink; } 

        .uiBarItem > div {
        
            position: relative;
            width: 100%;
            /* z-index: 21; */
        }
        .uiBarItem > button{
            align-items: center;
            color: black;
            display: flex;
            justify-content: center;
            width: max-content;
        }
            .uiBarItem > .btn-link{
                color: black;
            }
                .uiBarItem > .btn-link:hover{
                    color: black;
                    text-decoration: none;
                }

         
        
        #filterActive{color: aqua;}   
        #filterOptionDisplay > span{ display: flex; }
        /* #filterOptionDisplay > span > p{display: none; margin: 0;} */
        #filterOptionDisplay > span > p{display: flex; margin: 0;}

        #filterIsActive {color: green; }
        
        /* Dropdown Appearance */
        .uiBarItem > div > .dropdown-menu > div{
            display: flex;
            flex-direction: column;
            flex-wrap: wrap;
        }
            .uiBarItem > div > .dropdown-menu > div > button{
                background-color: white;
                color: black;
                display: flex;
                    align-items: center;
                font-weight: 900;
                width: auto;
                white-space: nowrap;
            }
            .uiBarItem > div > .dropdown-menu > div > button > span{margin-right: 5px;}

            .uiBarItem > div > .dropdown-menu > div > button:focus,
            .uiBarItem > div > .dropdown-menu > div > button:hover,
            .uiBarItem > div > .dropdown-menu > div > button:active{
                background-color: black;
                color: white;
                outline: 1px solid black !important;
            }


                .uiBarItem > .dropdown > div{
                    /* inset: 0px auto auto -4px !important; */
                    padding: 0; 
                    border: 4px solid;
                }
                #settingsDropdown > .dropdown > div{
                    /* transform: translate(-193px, 50px) !important; */
                }

                    /* .dropdownBtnTitle > span{line-height: inherit;} */
                    .navBarButton > span{line-height: inherit;}

                    /* .dropdownBtnTitle > p{display: none;}  */

                    .dropdownBtnTitle{display: flex; align-items: center;}
                    .dropdownBtnTitle > p{display: contents;}

                    .navBarButton > p{display: none;} 

/* Just in case I want to use it */
.uiBarDivider{
    font-weight: 900;
    padding: 2px;
}

/* Main Nav Bar */
#siteWideNavBar{
    display: flex;
        flex-wrap: wrap;
        justify-content: center;
    height: inherit;
    width: 100%;
}

/* #navBarScrollTopBtn > button > div > button{
    bottom: auto;
    border: none;
    height: auto;
    left: auto;
    margin: auto;
    position: relative;
    width: auto;

} */


/* Bookmark Page */
#bookmarkCountIndicator{

}
    #bookmarkCountIndicator > div {
        white-space: nowrap;
        padding: 10px;
        text-align: center;
        font-weight: 700;
    }
        #bookmarkCountIndicator > div > p{margin: 0;}
/* Article Page */

/************************************* Score Buttons */
/* overall score wrapper */
#scoreButtons{min-width: min-content;}
    #scoreButtons > button{width: 100%;}
    /* thumb and counter button wrapper */
        #scoreButtons > button > div{
            width: inherit;
        }
            #scoreButtons > button > div > div{
                display: flex;
                justify-content: space-evenly;
            }
                /* thumb and counter button */
                #scoreButtons > button > div > div > button{
                    background-color: white;
                    /* padding-left: 15px;
                    padding-right: 15px;
                    padding-top: 10px;
                    padding-bottom: 10px; */
                    padding-left: 10px;
                    padding-right: 10px;
                    width: auto;
                    /* border:4px solid; */
                    /*height: 53px;
                    margin-right:5px ;
                    */
                }
                    /* thumb and counter button */
                    #scoreButtons > button > div > div >button:focus:not(:focus-visible){
                        border: none;
                    }
                    /* thumb and counter wrapper */
                    #scoreButtons > button > div > div > button > span{
                        display: flex;
                        /*  flex-wrap: wrap;
                        width: min-content; */
                    }
                    /* score counter text */
                    #scoreButtons > button > div > div > button > span > p{margin: 0; margin-left: 3px;}


/************************************* Bookmark Controls */
#bookmarkControls{
    min-width: min-content;
}
    #bookmarkControls > button {width: 100%;}
        #bookmarkControls > button > .onCardControls{display: flex; width: inherit;}
            #bookmarkControls > button > .onCardControls > div{
                /* margin: 10px; */
                /* outline: 1px solid red; */
                position: relative;
                width: inherit;
            }
            #bookmarkControls > button > .onCardControls > div > button{
                /* background-color: red; */
                color: black;
                display: contents;
                /* line-height: 0px; */
                padding: 0;
            }
                #bookmarkControls > button > .onCardControls > div > button > span{
                    display: inline;
                    line-height: inherit;
                    /* background-color: #28a745; */
                }

.tags-item-wrapper > .filterButtonWrapper {position: absolute; left: -9999999999px;}
/************************************ liteKnews  */
#navBarLiteKnewsWrapper > button{
    margin: 0;
    padding: 0;
    width: 100%;
}
    #navBarLiteKnewsControls{
        display: flex;
            justify-content: space-evenly;
            width: 100%;
    }
        #navBarLiteKnewsControls  > button{
            background-color: white;
            /* margin: 20px; */
            min-width: fit-content;
            /* outline: 1px solid black; */
            /* width: 50px; */
            width: inherit;
        }

@media (max-width: 768px) {
    #navBarLiteKnewsWrapper{
        background-color: white;
        bottom: 0;
        position: fixed;
        width: 100%;
        z-index: 50;
    }
}

@media(min-width: 768px){
    #navBarLiteKnewsControls > button{
        /* width: 75px; */
    }
}

/* customising react.bootstrap  */
.dropdown-toggle::after { display: none !important;}
/* .btn-primary:hover, .btn-primary{background-color: black !important;} */
.btn-primary{border: 0px !important; background: inherit !important;}

.uiBarItem > .dropdown > button {
    align-items: center;  
    display: flex;
    justify-content: center;
    width: 100% !important;   
}

.uiBarItem > a > .dropdown > button{width: 100% !important}

    .uiBarItem > .dropdown > .btn-primary, .uiBarItem > a > .dropdown > .btn-primary{
        background-color: white;
        color: black;
    }

        /* Dropdown Button when hovered */
        .uiBarItem > .dropdown > .btn-primary:hover, .uiBarItem > a > .dropdown > .btn-primary:hover{
            /* background-color: white;
            color: black; */
        }

        .uiBarItem > .dropdown > .btn, .uiBarItem > a .dropdown > .btn { border-radius: 0;}

    button:focus:not(:focus-visible){
        /* outline: 1px solid black !important; */
    }


    .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle{
        color: black !important;
        background-color: white !important;
    }


/* Media Queries */
@media (min-width: 768px) {
    .uiBarItem{max-width: fit-content;}
        /* .dropdownBtnTitle{display: flex; align-items: center;}
            .dropdownBtnTitle > p{display: contents;} */
        .navBarButton{display: flex; align-items: center;}
            .navBarButton > p{display: contents;}
            #pageInfo > span > p{display: contents;}

            /* #filterOptionDisplay > span > p{display: flex; } */
    /* #siteWideNavBar{flex-wrap: nowrap;} */
    .headerWrapper{flex-wrap: nowrap; }
        .navWrapper{width: max-content;}
            /* .newUIBarWrapper{margin-top: 30px; } */

    /* Bookmark Controls */
    #bookmarkControls > button > .onCardControls > div{
        margin-left: 15px;
        margin-right: 15px ;
    }
}



@media (min-width: 690px) {
    #settingsDropdown > .dropdown > div{
        /* transform: translate(-206px, 50px) !important; */
    }
}

@media (max-width: 400px) {
    .headerWrapper{flex-wrap: wrap; justify-content: space-around;}
}

@media (max-width: 768px) {
    .headerWrapper{flex-wrap: wrap; justify-content: space-around; height: fit-content;}
     .navWrapper{width: inherit;}
        .newUIBarWrapper{justify-content: space-evenly;}
}

button{
    margin: inherit !important;
    height: inherit !important;
}

